--- a/html/table/table.html
+++ b/html/table/table.html
@@ -8,7 +8,7 @@
 
 <body>
     <table border="1" width="500px">
-        <caption>우리나라의 경제지표</caption>
+        <caption>우리나라의 경제지표</caption> <!-- caption 테이블의 제목 -->
         <!--colspan 줄끼리 병합 rowspan 열 끼리 병합 -->
         <tr>
             <th width="200">서울근교</th>
