--- a/html/table/exercise4.html
+++ b/html/table/exercise4.html
@@ -10,6 +10,7 @@
     <img src="../image/coffee2.gif" alt="">
     <p>하우스 러스팅 원두의 신선한 커피를 맛보고 싶다면 공인 1급 바리스타가 최고급 원두만을 직접 엄선하여 사용합니다.</p>
     <h1>메뉴</h1>
-    메뉴에 대하여 자세히 알고 싶다면 <a href="list.html" target="_blank">여기</a>를 클릭하세요.
+    메뉴에 대하여 자세히 알고 싶다면 
+    <a href="list.html" target="_blank">여기</a>를 클릭하세요.
 
 </body></html>
