--- a/html/form/input.html
+++ b/html/form/input.html
@@ -30,6 +30,13 @@
         <input type="submit" value="제출">
         <input type="reset" value="초기화">
         <br>
+        <select name="cars">
+            <option value="BMW">BMW</option>
+            <option value="Benz">Benz</option>
+            <option value="hyun">기아자동차</option>
+            <option value="kia">현대자동차</option>
+        </select>
+
         <br>
         <input type="submit" value="전송">
     </form>
