10월 5일 html 수업 + css 1차

--- a/html/exercise3.html
+++ b/html/exercise3.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <form action="result.jsp" method="">
+    <form action="adduser.jsp" method="">
         <h1>회원 가입 화면</h1>
         이름 : <input type="text"><br>
         주소 : <input type="text"><br>
