--- a/html/exercise5.html
+++ b/html/exercise5.html
@@ -2,48 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<title>Document</title>
 </head>
 
 <body>
-    <form action="adduser.jsp" method="post">
-        <fieldset>
+	<form action="adduser.jsp" method="post">
+		<fieldset>
 
-            <legend>카드 정보 입력</legend>
-            <ol>
+			<legend>카드 정보 입력</legend>
+			<ol>
 
-                <li>
-                    <fieldset>
-
-
-                        <legend>카드 타입</legend>
-                        <ol>
+				<li>
+					<fieldset>
 
 
-                            <li><input type="radio" name="card">VISA</li>
-                            <li><input type="radio" name="card">AmEx</li>
-                            <li><input type="radio" name="card">Mastarcard</li>
-                        </ol>
-                    </fieldset>
-                </li>
-
-                <li>카드번호
-                    <input type="text"></li>
-                <li>CRC 번호
-                    <input type="text"></li>
-                <li>카드소유자 이름 <input type="text" placeholder="카드 상의 이름"></li>
-
-            </ol>
-        </fieldset>
-
-        <fieldset>
-
-            <input type="submit" value="제출">
-        </fieldset>
+						<legend>카드 타입</legend>
+						<ol>
 
 
+							<li><input type="radio" name="card">VISA</li>
+							<li><input type="radio" name="card">AmEx</li>
+							<li><input type="radio" name="card">Mastarcard</li>
+						</ol>
+					</fieldset>
+				</li>
 
-    </form>
+				<li>카드번호
+					<input type="text"></li>
+				<li>CRC 번호
+					<input type="text"></li>
+				<li>카드소유자 이름 <input type="text" placeholder="카드 상의 이름"></li>
 
-</body></html>
+			</ol>
+		</fieldset>
+
+		<fieldset>
+
+			<input type="submit" value="제출">
+		</fieldset>
+
+
+
+	</form>
+
+</body>
+
+</html>
